fix(navigation): :bug: fixes flickering of the bg when navigating

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,13 +26,16 @@
 /* Main styles here */
 * {
   transition:
-    background-color 0.2s ease,
     color 0.2s ease,
     border-color 0.2s ease;
 }
 
 html {
   font-family: var(--font-serif);
+}
+
+html {
+  background: var(--bg-color);
 }
 
 html,
@@ -44,7 +47,6 @@ body {
 }
 
 body {
-  background: var(--bg-color);
   color: var(--text-color);
   font-size: var(--base-font-size);
   margin: 0;
@@ -281,14 +283,16 @@ a {
 .learning-list {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 .learning-list__item {
   display: flex;
   gap: 40px;
-  justify-content: center;
   align-items: center;
   padding: 30px 0;
-  border-bottom: 1px solid var(--muted-color);
+  border-bottom: 1px solid var(--transparent-color);
+
+  width: 100%;
 }
 .learning-list__item-link {
   display: flex;
