--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,7 +8,7 @@
   --heading-color: #1A1A1A;
   --text-color: #595959;
   --muted-color: #6B6B6B;
-  --transparent-color: rgba(0,0,0, 30%);
+  --transparent-color: rgba(19, 19, 19, 100%);
 }
 
 /* Light Mode */
@@ -19,7 +19,7 @@
   --heading-color: #1A1A1A;
   --text-color: #595959;
   --muted-color: #6B6B6B;
-  --transparent-color: rgba(0,0,0, 30%);
+  --transparent-color: rgba(19, 19, 19, 100%);
 }
 
 :root[data-theme="dark"] {
@@ -28,7 +28,7 @@
 --heading-color: #F8F8F7;
 --text-color: #B6B5B2;
 --muted-color: #AFAEAA;
-  --transparent-color: rgba(19, 19, 19, 100%);
+--transparent-color: rgba(255, 255, 255, 0.35);
 }
 
 /* Dark Mode */
